--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <script src="dict.js"></script>
     <script src="dict_time_machine.js"></script>
     <script src="dict_time_machine_test.js"></script>
+    <script src="utils.js"></script>
 </body>
 </html>
