adding working dom library

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <script src="dict.js"></script>
     <script src="dict_time_machine.js"></script>
     <script src="dict_time_machine_test.js"></script>
+    <script src="gooey.js"></script>
 </body>
 </html>
