working version, test.js demonstartes whole proj

--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <title>-</title>
 </head>
 <body>
-    <script src="utils.js"></script>
     <script src="dict.js"></script>
     <script src="dict_time_machine.js"></script>
-    <script src="dict_time_machine_test.js"></script>
     <script src="gooey.js"></script>
+    <script src="test.js"></script>
 </body>
 </html>
