packaged gooey + dict + dict_time_machine & min

--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <title>-</title>
 </head>
 <body>
-    <script src="dict.js"></script>
-    <script src="dict_time_machine.js"></script>
-    <script src="gooey.js"></script>
+    <script src="goo.min.js"></script>
     <script src="test.js"></script>
 </body>
 </html>
