--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
     <title>-</title>
 </head>
 <body>
-    <script src="goo.min.js"></script>
-    <script src="test.js"></script>
+
+    <!-- GOO test -->
+    <!--<script src="goo.min.js"></script>
+    <script src="components/_GOO_test.js"></script>-->
+
+    <!-- DOM test -->
+    <script src="components/gooey.js"></script>
+    <script src="components/_DOM_test.js"></script>
+
 </body>
 </html>
