undo limit with buffer

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 <body>
 
     <!-- GOO test -->
-    <!--<script src="goo.min.js"></script>
-    <script src="components/_GOO_test.js"></script>-->
+    <script src="goo.min.js"></script>
+    <script src="components/_GOO_test.js"></script>
 
     <!-- DOM test -->
-    <script src="components/gooey.js"></script>
-    <script src="components/_DOM_test.js"></script>
+    <!--<script src="components/gooey.js"></script>
+    <script src="components/_DOM_test.js"></script>-->
 
 </body>
 </html>
