support for multiple app compnents

--- a/example/index.html
+++ b/example/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>GOO</title>
-    <script src="../goo.js"></script>
+    <script src="../goo.min.js"></script>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 </head>
@@ -13,7 +13,7 @@
     <div class="wrapper">
         <img class="logo" src="https://i.gyazo.com/0c6379061a007de589d30eebec795c19.png">
         <div class="form-wrapper">
-            <input class="description-form" type="text" name="">
+            <input class="description-form" type="text" name="" />
             <div class="add">+</div>
         </div>
         <div class="hint">Use up and down arrow keys to redo/undo respectively</div>
