added eslint + webpack + folder structure changes

--- a/src/example/index.html
+++ b/src/example/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>GOO</title>
-    <script src="../goo.js"></script>
+    <script src="../goo.min.js"></script>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 </head>
