now an npm package @goo-js

--- a/example/index.html
+++ b/example/index.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <title>GOO</title>
-    <script src="../goo.min.js"></script>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 </head>
@@ -19,7 +18,7 @@
         <div class="hint">Use up and down arrow keys to redo/undo respectively</div>
         <div class="task-list"></div>
     </div>
-    <script src="app.js"></script>
+    <script src="dist/bundle.js"></script>
 </body>
 
 </html>
