--- a/example/index.html
+++ b/example/index.html
@@ -9,15 +9,7 @@
 </head>
 
 <body>
-    <div class="wrapper">
-        <img class="logo" src="https://i.gyazo.com/0c6379061a007de589d30eebec795c19.png">
-        <div class="form-wrapper">
-            <input class="description-form" type="text" name="" />
-            <div class="add">+</div>
-        </div>
-        <div class="hint">Use up and down arrow keys to redo/undo respectively</div>
-        <div class="task-list"></div>
-    </div>
+    <div class="goo"></div>
     <script src="dist/bundle.js"></script>
 </body>
 
