added baseUrl and browser navigation support to goo-router

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <script>
         let app = goo(document.body.children[0]);
 
+        app.use({base: '/C:/Users/Gabriel/Documents/dev/goo/index.html'});
+
         app.setState(['button1', 'button2', 'button3']);
 
         app.use({action: {
