--- a/benchmarks/index.html
+++ b/benchmarks/index.html
@@ -3,84 +3,169 @@
 <head>
     <title>Document</title>
     <script src="../dist/standard.js"></script>
-    <style>
-        .wrapper {
-            height: 50vh;
-            overflow: scroll;
-        }
-    </style>
 </head>
 
 <body>
-    <div class="wrapper"></div>
+    <style>
+        h1 {
+            display: inline-block;
+        }
+        table {
+            border-collapse: collapse;
+            width: 100%;
+        }
+        td {
+            vertical-align: top;
+        }
+        .test1 .wrapper {
+            height: 300px;
+            overflow-y: scroll;
+        }
+        .test1 > table td {
+            width: 50%;
+        }
+        .test1 .results td {
+            height: 20px;
+        }
+        .test1 .results tr:nth-child(2n) {
+            background-color: #eee;
+        }
+    </style>
+    <div class="test test1">
+        <h1>Test 1</h1>
+        <button onclick="test1()">run</button>
+        <table>
+            <tr>
+                <td>
+                    <h3>Test Area</h3>
+                    <div class="wrapper"></div>
+                </td>
+                <td>
+                    <h3>Results</h3>
+                    <div class="results">
+                        <table>
+                            <tr><td class="title"></td><td class="time"></td></tr>
+                            <tr><td class="title"></td><td class="time"></td></tr>
+                            <tr><td class="title"></td><td class="time"></td></tr>
+                            <tr><td class="title"></td><td class="time"></td></tr>
+                            <tr><td class="title"></td><td class="time"></td></tr>
+                            <tr><td class="title"></td><td class="time"></td></tr>
+                        </table>
+                    </div>
+                </td>
+            </tr>
+        </table>
+        <hr>
+    </div>
     <script>
+        (() => {
+            const wrapper = document.querySelector('.test1 .wrapper');
 
-        const wrapper = document.querySelector('.wrapper');
+            let rowContents = [];
 
-        let rowContents = [];
+            const app = okwolo(wrapper);
+            app.setState({});
+            app(() => () => (
+                ['table', {},
+                    rowContents.map((contents) => (
+                        ['tr', {}, [
+                            ['td', {}, [
+                                contents
+                            ]],
+                        ]]
+                    )),
+                ]
+            ));
 
-        const app = okwolo(wrapper);
-        app.setState({});
-        app(() => () => (
-            ['table', {},
-                rowContents.map((contents) => (
-                    ['tr', {}, [
-                        ['td', {}, [
-                            contents
-                        ]],
-                    ]]
-                )),
-            ]
-        ));
+            const tests = [
+                {
+                    title: 'Create 10,000 rows',
+                    rows: () => Array.apply(null, Array(10000)).map(() => 'TEST'),
+                },
+                {
+                    title: 'Append 1,000 rows',
+                    rows: (temp) => temp.concat(temp.slice(0, 999)),
+                },
+                {
+                    title: 'Remove 1,000 rows',
+                    rows: (temp) => temp.slice(0, 9999),
+                },
+                {
+                    title: 'Update 10% of rows',
+                    rows: (temp) => temp.map(() => Math.random() < 0.10 ? 'UPDATED' : 'TEST'),
+                },
+                {
+                    title: 'Update all rows',
+                    rows: (temp) => temp.map(() => 'UPDATED'),
+                },
+                {
+                    title: 'Remove all rows',
+                    rows: () => [],
+                },
+            ];
 
-        const tests = [
-            {
-                title: 'Create 10,000 rows',
-                rows: () => Array.apply(null, Array(10000)).map(() => 'TEST'),
-            },
-            {
-                title: 'Append 1,000 rows',
-                rows: (temp) => temp.concat(temp.slice(0, 999)),
-            },
-            {
-                title: 'Remove 1,000 rows',
-                rows: (temp) => temp.slice(0, 9999),
-            },
-            {
-                title: 'Update 10% of rows',
-                rows: (temp) => temp.map(() => Math.random() < 0.10 ? 'UPDATED' : 'TEST'),
-            },
-            {
-                title: 'Update all rows',
-                rows: (temp) => temp.map(() => 'UPDATED'),
-            },
-            {
-                title: 'Remove all rows',
-                rows: () => [],
-            },
-        ];
+            const run = (callback, index = 0) => {
+                if (!tests[index]) {
+                    callback(tests);
+                    return;
+                }
+                const {title, rows} = tests[index];
+                rowContents = rows(rowContents).slice();
+                window.requestAnimationFrame(() => {
+                    const startTime = Date.now();
+                    app.update();
+                    setTimeout(() => {
+                        window.requestAnimationFrame(() => {
+                            tests[index].time = Date.now() - startTime;
+                            run(callback, ++index);
+                        });
+                    }, 0);
+                });
+            };
 
-        const run = (index) => {
-            
-            if (!tests[index]) {
-                return;
-            }
-            const {title, rows} = tests[index];
-            rowContents = rows(rowContents).slice();
-            window.requestAnimationFrame(() => {
-                const startTime = Date.now();
-                app.update();
-                setTimeout(() => {
-                    window.requestAnimationFrame(() => {
-                        console.log(`${title}: ${Date.now() - startTime}ms`);
-                        run(++index);
+            window.test1 = () => {
+                const button = document.querySelector('.test1 button');
+                const resultsWrapper = document.querySelector('.test1 .results');
+                button.disabled = true;
+                const avg = [];
+                const addToAvg = (results) => {
+                    if (!avg.count) {
+                        avg.count = 0;
+                    }
+                    avg.count++;
+                    const multiplier = 1/avg.count;
+                    results.map(({time}, index) => {
+                        avg[index] = 1/avg.count * time + (avg[index] || 0) * (avg.count-1)/avg.count
                     });
-                }, 0);
-            });
-        };
-
-        run(0);
-
+                };
+                run((results) => {
+                    addToAvg(results);
+                    run((results) => {
+                        addToAvg(results);
+                        run((results) => {
+                            addToAvg(results);
+                            run((results) => {
+                                addToAvg(results);
+                                run((results) => {
+                                    addToAvg(results);
+                                    button.disabled = false;
+                                    resultsWrapper.innerHTML = `
+                                        <table>
+                                            ${results.map(({title}, index) => (`
+                                                <tr>
+                                                    <td class="title">${title}</td>
+                                                    <td class="time">${avg[index].toFixed(1)}ms</td>
+                                                </tr>
+                                            `)).join('')}
+                                        </table>
+                                    `;
+                                });
+                            });
+                        });
+                    });
+                });
+            };
+        })()
     </script>
 </body>
 
